# codepal

./: .gitignore  Dockerfile  README.md  config.toml.example  docker-compose.yml  pyproject.toml
docs/: HOW CodePal works.md  How to Automatically use CodePal.md  architecture.md  design.md  manual-testing-findings.md  manual-testing.md  pm-scope.md  tech-lead-plan.md  todo.md
examples/buggy_repo/: KNOWN_BUGS.md  README.md
examples/buggy_repo/src/: inventory.py  parser.py  stats.py  users.py
scripts/: post-commit.sh
src/codepal/: __init__.py  config.py  logging_config.py  main.py  mcp_server.py
src/codepal/api/: app.py  models.py
src/codepal/api/routes/: bugs.py  index.py  query.py  search.py  status.py
src/codepal/bugs/: __init__.py  store.py
src/codepal/cli/: main.py
src/codepal/db/: chroma.py
src/codepal/embeddings/: __init__.py  ollama.py
src/codepal/hooks/: installer.py
src/codepal/indexer/: __init__.py  chunker.py  parser.py  pipeline.py  state.py
src/codepal/llm/: dispatcher.py  ollama.py
src/codepal/mcp/: __init__.py
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_perf_indexing.py
tests/unit/: __init__.py  test_bugs.py  test_chroma.py  test_chunker.py  test_dispatcher.py  test_findings_regressions.py  test_mcp.py  test_ollama_client.py  test_parser.py  test_pipeline.py  test_search.py
