[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codepal"
version = "0.1.0"
description = "Local AI coding assistant with semantic search, bug DB, and MCP server"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # MCP server
    "fastmcp>=2.0.0",

    # Vector DB
    "chromadb>=0.5.0",

    # HTTP client (Ollama, async)
    "httpx>=0.27.0",

    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "tomli>=2.0.1",  # backport for <3.11; stdlib tomllib preferred on 3.11+

    # Code parsing
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",

    # SQLite async
    "aiosqlite>=0.20.0",

    # CLI
    "typer>=0.12.0",

    # Token counting (for chunk budget)
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
codepal = "codepal.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/codepal"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
