[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codepal"
version = "0.1.0"
description = "Local AI coding assistant with semantic search, bug DB, and MCP server"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.29.0,<1.0",

    # MCP server (2.x required for .http_app() / .get_asgi_app() ASGI mount)
    "fastmcp>=2.0.0,<3.0",

    # Vector DB (0.5.x ships AsyncClientAPI)
    "chromadb>=0.5.0,<1.0",

    # HTTP client — Ollama + external LLM, async
    "httpx>=0.27.0,<1.0",

    # Config
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.3.0,<3.0",
    "tomli>=2.0.1,<3.0",          # stdlib tomllib preferred on 3.11+; tomli as backport

    # Code parsing (tree-sitter 0.25+ supports ABI 15 emitted by
    # tree-sitter-python 0.25; older tree-sitter rejected those grammars
    # with "Incompatible Language version 15".)
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-python>=0.25,<0.26",
    "tree-sitter-javascript>=0.25,<0.26",
    "tree-sitter-typescript>=0.23,<0.24",  # 0.25 not yet released
    "tree-sitter-go>=0.25,<0.26",
    "tree-sitter-rust>=0.24,<0.26",

    # Async SQLite for incremental index state
    "aiosqlite>=0.20.0,<1.0",

    # CLI
    "typer>=0.12.0,<1.0",

    # Token counting for chunk budget
    "tiktoken>=0.7.0,<1.0",

    # Structured logging
    "structlog>=24.1.0,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",      # mock httpx calls in unit tests
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
codepal = "codepal.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/codepal"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["codepal"]

# ── mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true    # tree-sitter-* stubs not always available

# ── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: long-running tests (e.g. indexing benchmarks); deselect with -m 'not slow'",
]
